--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,11 @@ jobs:
       manifest: ${{ steps.update.outputs.manifest }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup PDM
         uses: pdm-project/setup-pdm@v3
+        with:
+          python-version: 3.11
       - name: Install dependencies
         working-directory: ./updater
         run: pdm install
@@ -48,7 +50,7 @@ jobs:
     needs: update
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Read manifest
         id: manifest
         run: |
@@ -80,19 +82,19 @@ jobs:
           echo "tags=$tags" >> $GITHUB_OUTPUT
       - name: Set up QEMU
         if: steps.manifest.outputs.updated == 'true'
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         if: steps.manifest.outputs.updated == 'true'
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         if: steps.manifest.outputs.updated == 'true'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         if: steps.manifest.outputs.updated == 'true'
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           push: ${{ github.event_name != 'pull_request' }}
           context: .
