--- a/updater/pyproject.toml
+++ b/updater/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "requests>=2.28.1",
     "pydantic>=1.10.2",
+    "loguru>=0.7.2",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
